# Project

./: .gitignore  pyproject.toml
Project_1/: BPE.model  Cleaned_sentence.text  MSE_AdvNLP_Lab1_student.ipynb  Voy_bpe.model  bpe.model  bpe.vocab  pyproject.toml  voynich.txt
