[project]
name = "project_adv_NLP"
version = "0.1.0"
description = "First project of NLP class on tokenizer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "nltk>=3.9.3",
    "numpy",
    "sentencepiece>=0.2.1",
    "spicy>=0.16.0",
]
